# juan

./: LICENSE.md  Makefile  README.md  notes.md  pyproject.toml
core/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_bag_description_alter_item_description_and_more.py  0003_alter_pack_bag.py  0004_alter_pack_items.py  0005_bag_weight_item_depth_item_height_item_weight_and_more.py  0006_bag_depth_bag_height_bag_width.py  0007_alter_bag_depth_alter_bag_description_and_more.py  0008_bag_user_item_user_pack_user.py
core/templates/: base.html
core/templates/core/: bag.html  bag_confirm_delete.html  bags.html  index.html  item.html  item_confirm_delete.html  items.html  pack.html  pack_confirm_delete.html  packs.html
core/templates/registration/: login.html  signup.html
core/tests/: __init__.py  test_bag.py  test_index.py  test_item.py  test_pack.py
project/: settings.py  urls.py
